5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1602_1017.log
== TEST (2019-03-31 21:03:47) 
-- CODE:
import math
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
d= 6371.01*math.arccos(sen(t1)*sen(t2)+cos(t2)*cos(g1 - g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:04:34) 
-- CODE:
import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1: ")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2: ")))
d= 6371.01*math.arccos(sen(t1)*sen(t2)+cos(t2)*cos(g1 - g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d= 6371.01*math.arccos(sen(t1)*sen(t2)+cos(t2)*cos(g1 - g2))
AttributeError: module 'math' has no attribute 'arccos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:06:02) 
-- CODE:
import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1: ")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2: ")))
d= 6371.01*math.arccos(math.sen(t1)*math.sen(t2)+math.cos(t2)*math.cos(g1 - g2))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d= 6371.01*math.arccos(math.sen(t1)*math.sen(t2)+math.cos(t2)*math.cos(g1 - g2))
AttributeError: module 'math' has no attribute 'arccos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:08:29) 
-- CODE:
import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1: ")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2: ")))
d= 6371.01*(math.acos(math.sin(t1)*math.sin(t2)+math.cos(t2)*math.cos(g1 - g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 7
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:09:01) 
-- CODE:
import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1: ")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2: ")))
d= 6371.01*(math.acos(math.sin(t1)*math.sin(t2)+math.cos(t2)*math.cos(g1 - g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 7
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:09:18) 
-- CODE:
import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1: ")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2: ")))
d= (6371.01*(math.acos(math.sin(t1)*math.sin(t2)+math.cos(t2)*math.cos(g1 - g2)))
print(round(d, 2))
-- ERROR:
File "XXXX", line 7
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:11:41) 
-- CODE:
import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1: ")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2: ")))
d= 6371.01*math.acos(((math.sin(t1))*(math.sin(t2))+((math.cos(t2))*(math.cos(g1 - g2)))
print(round(d, 2))
-- ERROR:
File "XXXX", line 7
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:17:18) 
-- CODE:
import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1: ")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2: ")))
a= math.cos(g1 - g2)
b= math.cos(t2)
c= math.cos(t1)
d= math.sin(t2)
e= math.sin(t1)
f= ((e*d) + (c*b*a))
g= 6371.01*math.acos(f)
print(round(g, 2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:18:28) 
-- CODE:
import math
t1 = math.radians(float(input("Latitude de P1: ")))
g1 = math.radians(float(input("Longitude de P1: ")))
t2 = math.radians(float(input("Latitude de P2: ")))
g2 = math.radians(float(input("Longitude de P2: ")))
a= math.cos(g1 - g2)
b= math.cos(t2)
c= math.cos(t1)
d= math.sin(t2)
e= math.sin(t1)
f= ((e*d) + (c*b*a))
g= 6371.01*math.acos(f)
print(round(g, 2))
-- EXECUTION TIME:
0.119888
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
